# snurk

./: Cargo.toml  README.md  rust-toolchain
crates/cli/: Cargo.toml
crates/cli/src/: convert_zkey.rs  lib.rs  main.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  proof.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: circuit.rs  lib.rs  wasm.rs
test-vectors/: keccak256_256_test.wasm
web-bench/: .pnp.cjs  README.md  bs-config.js  comparing.js  index.html  package.json
