[package]
name = "snurk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snurk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
wasm-pack = "0.13"

ark-circom = { workspace = true }
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
ark-groth16 = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
ark-serialize = { workspace = true }
ark-relations = { workspace = true }
ark-snark = { workspace = true }

[features]
default = ["ark-circom/default"]