[package]
name = "snurk-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
snurk-engine = { path = "../engine", default-features = false }

serde = { workspace = true }
serde_json = { workspace = true }
num = { workspace = true }
num-traits = { workspace = true }
num-bigint = { workspace = true }

wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-rayon = { version = "1.2", optional = true, features = ["no-bundler"] }
rayon = { version = "1.8", optional = true }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Performance",
    "console",
], optional = true }

console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["snurk-engine/default"]
wasm = ["snurk-engine/wasm", "wasm-bindgen", "wasm-bindgen-rayon", "rayon", "web-sys", "console_error_panic_hook"]
build = ["wasm"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-02"]